# gansi-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
gansi-cli/: Cargo.toml
gansi-cli/src/: com_wrapper.rs  main.rs  ui.rs
gansi-cli/src/defender/: mod.rs  ps.rs  wmi.rs
gansi-com/: Cargo.toml
gansi-com/src/: gansi.rs  lib.rs
gansi-com/src/amsi_utils/: event.rs
gansi-com/src/gansi/: antimalware.rs  attribute.rs  keywords.rs  report.rs  scan.rs
macros/: Cargo.toml
shared/: Cargo.toml
shared/src/: constants.rs  debug_macros.rs  ffi_string.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
