[workspace]
members = [
    "gansi-cli",
    "gansi-com",
    "shared",
    "macros",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anubhav Gain <anubhavgain@gmail.com>"]
license = "MIT"
repository = "https://github.com/anubhavg-icpl/gansi-rs"

[workspace.dependencies]
anyhow = "1"
log = "0.4.27"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1.44.2"
windows-core = "0.62.2"
windows = "0.62.2"
