[package]
name = "gansi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for registering and tracing the Gansi AMSI provider"

[dependencies]
shared = { path = "../shared" }

anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
env_logger = "0.11.8"
ctrlc = "3.4.7"
windows-core = { workspace = true }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_Security_Authorization",
]
